--- a/client/style.css
+++ b/client/style.css
@@ -183,3 +183,13 @@ h3 {
 .typeSelect {
   display: inline-block;
 }
+.review {
+    border: 1px solid #ccc;
+    border-left: none;
+    border-right: none;
+    margin-top: 10px;
+    padding: 10px 0;
+    width: 80%;
+    margin-left: 10%;
+    text-align: justify;
+}
